# mcp-patterns

./: .env.example  CLAUDE.md  README.md  pattern-1-resource-caching.md  pattern-2-dynamic-scopes-tool-execution.md  pattern-3-fastmcp-logging-observability.md  pyproject.toml
.chainlit/: config.toml
.claude/: domains.txt
src/client/: agent.py  app.py
src/mcp_patterns/observability/: __init__.py  config.py  logging.py  metrics.py  setup.py  tracing.py
src/server/: auth.py  cache.py  lifespan.py  main.py  models.py  resources.py  tools.py
